--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -54,17 +54,17 @@
         <!--suppress PluginXmlValidity (can't find third-party plugins, but it's OK) -->
         <fileIconProvider
             id="extraIconsFileIconProvider"
-            order="first, before amailp.intellij.robot, before com.vladsch.idea.multimarkdown, before com.hiberbee.intellij.hiberbee-theme, before nb-mind-map-idea, before mdx.js, before com.intellij.kubernetes, before tech.pantheon.yanginator, before com.intellij.mermaid, before com.jetbrains.writerside, before com.microsoft.tooling.msservices.intellij.azure, before com.haulmont.jpab, before com.intellij.ml.llm"
+            order="first, before lermitage.intellij.extratci, before amailp.intellij.robot, before com.vladsch.idea.multimarkdown, before com.hiberbee.intellij.hiberbee-theme, before nb-mind-map-idea, before mdx.js, before com.intellij.kubernetes, before tech.pantheon.yanginator, before com.intellij.mermaid, before com.jetbrains.writerside, before com.microsoft.tooling.msservices.intellij.azure, before com.haulmont.jpab, before com.intellij.ml.llm"
             implementation="lermitage.intellij.extra.icons.ExtraIconProvider"/>
         <!--suppress PluginXmlValidity (can't find third-party plugins, but it's OK) -->
         <iconProvider
             id="extraIconsIconProvider"
-            order="first, before amailp.intellij.robot, before com.vladsch.idea.multimarkdown, before com.hiberbee.intellij.hiberbee-theme, before nb-mind-map-idea, before mdx.js, before com.intellij.kubernetes, before tech.pantheon.yanginator, before com.intellij.mermaid, before com.jetbrains.writerside, before com.microsoft.tooling.msservices.intellij.azure, before com.haulmont.jpab, before com.intellij.ml.llm"
+            order="first, before lermitage.intellij.extratci, before amailp.intellij.robot, before com.vladsch.idea.multimarkdown, before com.hiberbee.intellij.hiberbee-theme, before nb-mind-map-idea, before mdx.js, before com.intellij.kubernetes, before tech.pantheon.yanginator, before com.intellij.mermaid, before com.jetbrains.writerside, before com.microsoft.tooling.msservices.intellij.azure, before com.haulmont.jpab, before com.intellij.ml.llm"
             implementation="lermitage.intellij.extra.icons.ExtraIconProvider"/>
         <!--suppress PluginXmlValidity (can't find third-party plugins, but it's OK) -->
         <projectViewNodeDecorator
             id="extraIconsProjectViewNodeDecorator"
-            order="first, before amailp.intellij.robot, before com.vladsch.idea.multimarkdown, before com.hiberbee.intellij.hiberbee-theme, before nb-mind-map-idea, before mdx.js, before com.intellij.kubernetes, before tech.pantheon.yanginator, before com.intellij.mermaid, before com.jetbrains.writerside, before com.microsoft.tooling.msservices.intellij.azure, before com.haulmont.jpab, before com.intellij.ml.llm"
+            order="first, before lermitage.intellij.extratci, before amailp.intellij.robot, before com.vladsch.idea.multimarkdown, before com.hiberbee.intellij.hiberbee-theme, before nb-mind-map-idea, before mdx.js, before com.intellij.kubernetes, before tech.pantheon.yanginator, before com.intellij.mermaid, before com.jetbrains.writerside, before com.microsoft.tooling.msservices.intellij.azure, before com.haulmont.jpab, before com.intellij.ml.llm"
             implementation="lermitage.intellij.extra.icons.ExtraIconProvider"/>
 
         <!-- Settings services -->
