--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -19,6 +19,7 @@
         <li>JetBrains <b>Gateway</b> support: please install plugin in <a href="https://github.com/jonathanlermitage/intellij-extra-icons-plugin/issues/152#issuecomment-1691873681">Host</a>, or in both Host and Client, but not in Client only. Also, for now, plugin's settings panels are partially broken (some fields are hidden, but become visible when clicked or hovered over), but icons override works.</li>
       </ul>
       📢 If you want to <b>speed up</b> the resolution of a few problems on JetBrains side affecting this plugin, or <b>help plugin developers</b>, please consider up-voting these YouTrack issues:<br>
+      - <a href="https://youtrack.jetbrains.com/issue/IDEA-247819/How-to-customize-folder-icons-in-Packages-view"><b>IDEA-247819</b></a>: IntelliJ does not allow folder icons override in Packages View. This issue has been submitted 3 years ago (Aug 2020), it definitively needs more visibility.<br>
       - <a href="https://youtrack.jetbrains.com/issue/RIDER-101621/Plugin-SDK-Rider-cant-override-folder-icons"><b>RIDER-101621</b></a>: a Rider IDE issue affecting folder icons override.<br>
       - <a href="https://youtrack.jetbrains.com/issue/MP-4248"><b>MP-4248</b></a> and <a href="https://youtrack.jetbrains.com/issue/MP-5648/Allow-reviewing-payed-plugins-only-by-users-actually-owning-its-license"><b>MP-5648</b></a>: marketplace moderation problems.<br>
       Thank you!
