cancel v2023.4.2, inform user about some JetBrains issues affecting this plugin

--- a/src/main/resources/ExtraIconsI18n.properties
+++ b/src/main/resources/ExtraIconsI18n.properties
@@ -145,3 +145,9 @@ uitype.selector.prefer.old=Always prefer old UI icons
 user.icons.table.col.description=Description
 user.icons.table.col.iconpack=Icon Pack name
 user.icons.table.tab.name=User icons
+main.pane.known.issues.title=Known issues
+known.issues.title=<html><br>Up-voting these JetBrains issues would greatly help. Thank you!<br></html>
+known.issue.label1=<html><br><b>IDEA-247819</b><br>IntelliJ based IDEs do not allow folder icons override in the Packages View.<br>That means we cannot set custom icons for folders in the Packages View.</html>
+known.issue.label2=<html><br><b>RIDER-101621</b><br>Rider IDE does not allow folder icons override in the Solution Explorer.<br>That means we cannot set custom icons for folders in the Solution Explorer.</html>
+known.issue.btn1=Visit IDEA-247819 (youtrack.jetbrains.com)
+known.issue.btn2=Visit RIDER-101621 (youtrack.jetbrains.com)
