--- a/src/main/resources/ExtraIconsI18n.properties
+++ b/src/main/resources/ExtraIconsI18n.properties
@@ -148,7 +148,7 @@ user.icons.table.tab.name=User icons
 main.pane.known.issues.title=Known issues
 known.issues.title=<html><br>Up-voting these JetBrains issues would greatly help. Thank you!<br></html>
 known.issue.label1=<html><br><b>IDEA-247819</b><br>IntelliJ based IDEs do not allow folder icons override in the Packages View.<br>That means we cannot set custom icons for folders in the Packages View.</html>
-known.issue.label2=<html><br><b>IDEA-339254</b><br>IntelliJ IDE shows default Class icon for Java Exceptions until you modify them.<br/>You have to modify Java Exception files to see the corresponding Exception icon.<br/>That means you cannot easily see the custom red Exception icons.</html>
+known.issue.label2=<html><br><b>IDEA-339254</b><br>IntelliJ IDE shows default Class icon for Java Exceptions until you modify them.<br/>You have to modify Java Exception files to see the corresponding Exception icon.<br/>That means we cannot easily see the custom red Exception icons.</html>
 known.issue.label3=<html><br><b>RIDER-101621</b><br>Rider IDE does not allow folder icons override in the Solution Explorer.<br>That means we cannot set custom icons for folders in the Solution Explorer.</html>
 known.issue.btn1=Visit IDEA-247819 (youtrack.jetbrains.com)
 known.issue.btn2=Visit IDEA-339254 (youtrack.jetbrains.com)
