--- a/gradle.properties
+++ b/gradle.properties
@@ -11,11 +11,8 @@ pluginIdeaVersionCacheDurationInHours=24
 # Plugin version. If set to "auto", use the latest tag name (without the leading 'v') as the plugin version
 pluginVersion=auto
 
-# If true, ensure that plugin's product descriptor is present, otherwise no verification is done
-pluginVerifyProductDescriptor=false
-
-# If false, build a plugin which doesn't ask for a paid license
-pluginNeedsLicense=true
+# License type: "free" (no license needed), "lifetime" (lifetime paid license) or "subscription" (monthly/yearly paid subscription)
+pluginLicenseType=subscription
 
 # The Gradle Test Logger plugin's theme: PLAIN, STANDARD (which displays colours, so it's not correctly
 # supported by some terminals) or MOCHA (same problem)
