--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.md]
+[*.{md,svg}]
 max_line_length = off
 trim_trailing_whitespace = false
 
