prepare a special notification for lifetime lic

--- a/src/main/resources/ExtraIconsI18n.properties
+++ b/src/main/resources/ExtraIconsI18n.properties
@@ -132,9 +132,9 @@ plugin.icons.table.filter=Regex to filter Plugin icons table by:
 plugin.icons.table.tab.name=Plugin icons
 quick.action.label=Quick action:
 reset.hints.btn=Reset
-reset.hints.success.subtitle=If needed, Extra Icons tips will appear the next time the IDE is launched.
-reset.hints.success.title=Tips reset
-reset.hints.title=Reset Extra Icons tips:
+reset.hints.success.subtitle=If needed, Extra Icons tips and notifications will appear the next time the IDE is launched.
+reset.hints.success.title=Success
+reset.hints.title=Reset Extra Icons hints and notifications:
 settings.idelevel.menu=Extra Icons
 settings.projectlevel.menu=Project
 uitype.selector.auto.select=Auto select old/new UI icons
@@ -153,3 +153,6 @@ known.issue.label3=<html><br><b>RIDER-101621</b><br>Rider IDE does not allow fol
 known.issue.btn1=Visit IDEA-247819 (youtrack.jetbrains.com)
 known.issue.btn2=Visit IDEA-339254 (youtrack.jetbrains.com)
 known.issue.btn3=Visit RIDER-101621 (youtrack.jetbrains.com)
+notif.tips.lifetime.lic.intro.title=Extra Icons lifetime licenses
+notif.tips.lifetime.lic.intro.content=<html>Lifetime licenses for Extra Icons are now available: one-time payment for the plugin and use it for a lifetime. Get more information by clicking on the link below.</html>
+notif.tips.lifetime.lic.intro.btn=How to get a lifetime license
