--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,9 @@ pluginEnforceIdeSlowOperationsAssertion=true
 
 # Empty sandboxed IDE system/log folder before run
 pluginClearSandboxedIDESystemLogsBeforeRun=true
+
+# Plugin description when lifetime license is enabled
+pluginLifetimeLicenseDescriptionHeader=Same plugin as Extra Icons, with a <b>lifetime license</b> (pay once, get updates for life).
+pluginLifetimeLicenseId=lermitage.extra.icons.lifetime
+pluginLifetimeLicenseCode=PEXTRAICONSLIFE
+pluginLifetimeLicenseName=Extra Icons Lifetime
