--- a/src/main/resources/ExtraIconsI18n.properties
+++ b/src/main/resources/ExtraIconsI18n.properties
@@ -157,3 +157,4 @@ notif.tips.lifetime.lic.intro.title=Extra Icons lifetime licenses
 notif.tips.lifetime.lic.intro.content=<html>Lifetime licenses for Extra Icons are now available: one-time payment for the plugin and use it for a lifetime. Get more information by clicking on the link below.</html>
 notif.tips.lifetime.lic.intro.btn=How to get a lifetime license
 license.required.msg=A license is needed for Extra Icons plugin.
+license.not.found.config.title=<html><b>Found no valid Extra Icons license. Plugin will not apply icons override.</b></html>
