refac and use property to set license check fast mode
property instead of env var, because env var may not be accessible by running process: only a limited set of env vars are copied to child process running the IDE. Properties are set via IDE directly (Help > Edit Custom Properties)

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -116,7 +116,7 @@
                              id="ExtraIcons_VFSChangesListenersProjectActivity"
                              order="last, after ExtraIcons_EnablerServicesProjectActivity"/>
         <!-- Check plugin's license activation -->
-        <backgroundPostStartupActivity implementation="lermitage.intellij.extra.icons.activity.LicCheckIDEActivity"
+        <backgroundPostStartupActivity implementation="lermitage.intellij.extra.icons.activity.ExtraIconsLicenseCheckIDEActivity"
                                        id="ExtraIcons_LicCheckProjectActivity"
                                        order="last"/>
     </extensions>
