rework build and license management

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,7 +5,7 @@
     <vendor email="jonathan@lermitage.biz" url="https://github.com/jonathanlermitage">JONATHAN_LERMITAGE</vendor>
     <!-- required parameters for paid plugins: https://plugins.jetbrains.com/docs/marketplace/add-required-parameters.html -->
     <!-- IMPORTANT reminder: change the release-date and release-version on major version changes only -->
-    <product-descriptor code="PEXTRAICONS" release-date="20231105" release-version="20233"/>
+    <product-descriptor code="PEXTRAICONS" release-date="20240102" release-version="20241"/>
 
     <description><![CDATA[
       <ul>
@@ -13,10 +13,10 @@
         <li>Shows an icon for <b>Git sub-module folders</b>.</li>
         <li><b>Highly configurable</b>: see <i>File &gt; Settings &gt; Appearance &amp; Behavior &gt; Extra Icons</i> to select extra icons to (de)activate. This is configurable at IDE and project level.</li>
         <li>You can also register <b>your own icons</b> in order to override file icons and all <a href="https://jetbrains.design/intellij/resources/icons_list/">IDE icons</a> (including toolbars, menus, etc.).</li>
-        <li>You can import and export icons from external files. This also means you can easily share icon themes with friends. You can also download online <b>icon packs</b> (example: <a href="https://github.com/jonathanlermitage/intellij-extra-icons-plugin/blob/master/themes/THEMES.md#filesolduitheme">restore the <b>old file icons</b> when using the new UI</a>).</li>
+        <li>You can import and export icons from external files. This also means you can easily share icon themes with friends. You can also download online <b>icon packs</b> (example: <a href="https://github.com/jonathanlermitage/intellij-extra-icons-plugin/blob/master/themes/THEMES.md#filesolduitheme">restore the old file icons when using the new UI</a>).</li>
         <li>For more information, please see this <a href="https://github.com/jonathanlermitage/intellij-extra-icons-plugin/blob/master/docs/GET_STARTED.md">guide</a>.</li>
         <li>For questions about the plugin licensing models, please see the <a href="https://github.com/jonathanlermitage/intellij-extra-icons-plugin/blob/master/docs/LICENSE_FAQ.md">license FAQ</a>.</li>
-        <li>JetBrains <b>Gateway</b> support: please install plugin in <a href="https://github.com/jonathanlermitage/intellij-extra-icons-plugin/issues/152#issuecomment-1691873681">Host</a>, or in both Host and Client, but not in Client only. Also, for now, plugin's settings panels are partially broken (some fields are hidden, but become visible when clicked or hovered over), but icons override works.</li>
+        <li>JetBrains <b>Gateway</b> support is limited. Gateway may fail to register licenses for third-party paid plugins (like Extra Icons), and it may not render some settings GUI forms correctly. Unfortunately, these issues are on the JetBrains side. Installing the plugin on the <i>host</i> and/or <i>client</i> sides can help. As a workaround for licensing issues, you can still build the plugin by yourself and remove the license requirement. The plugin is still free (MIT) and open source. I ask for a modest retribution only if you get the plugin from the marketplace, which, I think, is a good way to support my work. Thank you.</li>
       </ul>
       📢 Starting from 2024, I will occasionally send some <a href="https://github.com/jonathanlermitage/intellij-extra-icons-plugin/blob/master/docs/LICENSE_FAQ.md#i-received-a-coupon-for-a-free-license-how-does-it-work">coupons</a> for Free licenses on <a href="https://twitter.com/JLermitage">Twitter</a> and <a href="https://bsky.app/profile/jonathanlermitage.bsky.social">Bluesky</a>. Stay tuned.
       <br><br>
@@ -52,6 +52,9 @@
     <!-- please see https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html#modules-available-in-all-products
          on how to target different products -->
     <depends>com.intellij.modules.platform</depends>
+
+    <!-- https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html#incompatible-with -->
+    <incompatible-with>REPLACED_BY_GRADLE</incompatible-with>
 
     <!-- Icon Patchers override file icon by icon name -->
     <!--suppress PluginXmlDynamicPlugin --> <!-- PluginXmlDynamicPlugin suppressed because plugin already has 'require-restart="true"' -->
