--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -45,7 +45,8 @@
     -->
 
     <!-- please see https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html for description -->
-    <idea-version since-build="231.8109.175"/> <!-- 2023.1, required by com.intellij.openapi.startup.ProjectActivity and NewUI.isEnabled() -->
+    <idea-version
+            since-build="231.8109.175"/> <!-- 2023.1, required by com.intellij.openapi.startup.ProjectActivity and NewUI.isEnabled() -->
 
     <!-- please see https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html#modules-available-in-all-products
          on how to target different products -->
@@ -66,25 +67,25 @@
         <!-- Icon Providers override file icon by file path -->
         <!--suppress PluginXmlValidity (can't find third-party plugins, but it's OK) -->
         <fileIconProvider
-            id="extraIconsFileIconProvider"
-            order="first, before lermitage.intellij.extratci, before amailp.intellij.robot, before com.vladsch.idea.multimarkdown, before com.hiberbee.intellij.hiberbee-theme, before nb-mind-map-idea, before mdx.js, before com.intellij.kubernetes, before tech.pantheon.yanginator, before com.intellij.mermaid, before com.jetbrains.writerside, before com.microsoft.tooling.msservices.intellij.azure, before com.haulmont.jpab, before com.intellij.ml.llm, before org.jetbrains.android, before Dart, before io.flutter"
-            implementation="lermitage.intellij.extra.icons.ExtraIconProvider"/>
+                id="extraIconsFileIconProvider"
+                order="first, before lermitage.intellij.extratci, before amailp.intellij.robot, before com.vladsch.idea.multimarkdown, before com.hiberbee.intellij.hiberbee-theme, before nb-mind-map-idea, before mdx.js, before com.intellij.kubernetes, before tech.pantheon.yanginator, before com.intellij.mermaid, before com.jetbrains.writerside, before com.microsoft.tooling.msservices.intellij.azure, before com.haulmont.jpab, before com.intellij.ml.llm, before org.jetbrains.android, before Dart, before io.flutter"
+                implementation="lermitage.intellij.extra.icons.ExtraIconProvider"/>
         <!--suppress PluginXmlValidity (can't find third-party plugins, but it's OK) -->
         <iconProvider
-            id="extraIconsIconProvider"
-            order="first, before lermitage.intellij.extratci, before amailp.intellij.robot, before com.vladsch.idea.multimarkdown, before com.hiberbee.intellij.hiberbee-theme, before nb-mind-map-idea, before mdx.js, before com.intellij.kubernetes, before tech.pantheon.yanginator, before com.intellij.mermaid, before com.jetbrains.writerside, before com.microsoft.tooling.msservices.intellij.azure, before com.haulmont.jpab, before com.intellij.ml.llm, before org.jetbrains.android, before Dart, before io.flutter"
-            implementation="lermitage.intellij.extra.icons.ExtraIconProvider"/>
+                id="extraIconsIconProvider"
+                order="first, before lermitage.intellij.extratci, before amailp.intellij.robot, before com.vladsch.idea.multimarkdown, before com.hiberbee.intellij.hiberbee-theme, before nb-mind-map-idea, before mdx.js, before com.intellij.kubernetes, before tech.pantheon.yanginator, before com.intellij.mermaid, before com.jetbrains.writerside, before com.microsoft.tooling.msservices.intellij.azure, before com.haulmont.jpab, before com.intellij.ml.llm, before org.jetbrains.android, before Dart, before io.flutter"
+                implementation="lermitage.intellij.extra.icons.ExtraIconProvider"/>
         <!--suppress PluginXmlValidity (can't find third-party plugins, but it's OK) -->
         <projectViewNodeDecorator
-            id="extraIconsProjectViewNodeDecorator"
-            order="first, before lermitage.intellij.extratci, before amailp.intellij.robot, before com.vladsch.idea.multimarkdown, before com.hiberbee.intellij.hiberbee-theme, before nb-mind-map-idea, before mdx.js, before com.intellij.kubernetes, before tech.pantheon.yanginator, before com.intellij.mermaid, before com.jetbrains.writerside, before com.microsoft.tooling.msservices.intellij.azure, before com.haulmont.jpab, before com.intellij.ml.llm, before org.jetbrains.android, before Dart, before io.flutter"
-            implementation="lermitage.intellij.extra.icons.ExtraIconProvider"/>
+                id="extraIconsProjectViewNodeDecorator"
+                order="first, before lermitage.intellij.extratci, before amailp.intellij.robot, before com.vladsch.idea.multimarkdown, before com.hiberbee.intellij.hiberbee-theme, before nb-mind-map-idea, before mdx.js, before com.intellij.kubernetes, before tech.pantheon.yanginator, before com.intellij.mermaid, before com.jetbrains.writerside, before com.microsoft.tooling.msservices.intellij.azure, before com.haulmont.jpab, before com.intellij.ml.llm, before org.jetbrains.android, before Dart, before io.flutter"
+                implementation="lermitage.intellij.extra.icons.ExtraIconProvider"/>
 
         <!-- Settings services -->
         <applicationService
-            serviceImplementation="lermitage.intellij.extra.icons.cfg.services.SettingsIDEService"/>
+                serviceImplementation="lermitage.intellij.extra.icons.cfg.services.SettingsIDEService"/>
         <projectService
-            serviceImplementation="lermitage.intellij.extra.icons.cfg.services.SettingsProjectService"/>
+                serviceImplementation="lermitage.intellij.extra.icons.cfg.services.SettingsProjectService"/>
 
         <!-- Config panels GUI -->
         <applicationConfigurable provider="lermitage.intellij.extra.icons.cfg.providers.IDEConfigurableProvider"
@@ -102,9 +103,9 @@
         <!-- Init all Icon Enablers once indexing is done then reload projects icons -->
         <!-- Subscribe to a message bus in order to manage icons refreshing -->
         <postStartupActivity
-            implementation="lermitage.intellij.extra.icons.activity.RefreshIconsListenerProjectActivity"
-            id="ExtraIcons_RefreshIconsListenerProjectActivity"
-            order="last, before ExtraIcons_EnablerServicesProjectActivity, before ExtraIcons_HintNotificationsProjectActivity, before ExtraIcons_VFSChangesListenersProjectActivity"/>
+                implementation="lermitage.intellij.extra.icons.activity.RefreshIconsListenerProjectActivity"
+                id="ExtraIcons_RefreshIconsListenerProjectActivity"
+                order="last, before ExtraIcons_EnablerServicesProjectActivity, before ExtraIcons_HintNotificationsProjectActivity, before ExtraIcons_VFSChangesListenersProjectActivity"/>
         <postStartupActivity implementation="lermitage.intellij.extra.icons.activity.EnablerServicesProjectActivity"
                              id="ExtraIcons_EnablerServicesProjectActivity"
                              order="last"/>
@@ -116,10 +117,6 @@
         <postStartupActivity implementation="lermitage.intellij.extra.icons.activity.VFSChangesListenersProjectActivity"
                              id="ExtraIcons_VFSChangesListenersProjectActivity"
                              order="last, after ExtraIcons_EnablerServicesProjectActivity"/>
-        <!-- Check plugin's license activation -->
-        <backgroundPostStartupActivity implementation="lermitage.intellij.extra.icons.activity.ExtraIconsLicenseCheckIDEActivity"
-                                       id="ExtraIcons_LicCheckProjectActivity"
-                                       order="last"/>
     </extensions>
 
 </idea-plugin>
