Update buildscript to make it less awful (but still pretty awful)
Signed-off-by: solonovamax <solonovamax@12oclockpoint.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,9 +11,6 @@ pluginIdeaVersionCacheDurationInHours=24
 # Plugin version. If set to "auto", use the latest tag name (without the leading 'v') as the plugin version
 pluginVersion=auto
 
-# License type: "free" (no license needed), "lifetime" (lifetime paid license) or "subscription" (monthly/yearly paid subscription)
-pluginLicenseType=subscription
-
 # The Gradle Test Logger plugin's theme: PLAIN, STANDARD (which displays colours, so it's not correctly
 # supported by some terminals) or MOCHA (same problem)
 testLoggerStyle=PLAIN
@@ -31,12 +28,6 @@ pluginEnforceIdeSlowOperationsAssertion=true
 # Empty sandboxed IDE system/log folder before run
 pluginClearSandboxedIDESystemLogsBeforeRun=true
 
-# Plugin information when lifetime license is enabled
-pluginLifetimeLicenseDescriptionHeader=Same plugin as Extra Icons, with a <b>lifetime license</b> (pay once, get updates for life).
-pluginLifetimeLicenseId=lermitage.extra.icons.lifetime
-pluginLifetimeLicenseCode=PEXTRAICONSLIFE
-pluginLifetimeLicenseName=Extra Icons Lifetime
-
 # Plugin information when no license is required
-pluginFreeId=lermitage.extra.icons.free
-pluginFreeName=Extra Icons Free
+pluginFreeId=lermitage.extra.icons.oss
+pluginFreeName=Extra Icons OSS
