--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ pluginJavaVersion=17
 
 # IDE version when running runIde task (example: IC-2023.1). Set to "IC-LATEST-STABLE" or "IU-LATEST-STABLE"
 # to find latest stable IDE version from JetBrains website
-pluginIdeaVersion=IC-LATEST-STABLE
+pluginIdeaVersion=2024.2
 
 # When pluginIdeaVersion is empty, cache latest stable IDE version found for given number of hours
 pluginIdeaVersionCacheDurationInHours=24
